# Carfl

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  testwebhook
Ca/: CaKey.pem  rootCACert.pem  rootCACert.srl
Configuration/: ConfCarflotServer.json
LOG/: Log.txt
projet_client/: ConnexionCustomer.py  InscriptionCustomer.py  customer.py  notepade_projetClient.txt
projet_client/keys/: pythonClient.crt  pythonClient.key
serverKey/: server.crt  server.csr  server.key  server.key.orig
src/: Main.cpp  RestHandlerPackage.cpp  Secu.cpp  Secu.h  Sockets.hpp  main.cpp
src/Network/: ClientSocket.cpp  ClientSocket.h  Errors.cpp  Errors.h  IClientSocket.h  ISecu.h  IServerSocket.h  Messages.h  Secu.cpp  Secu.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
src/RestApiHandler/: CodeAuthenticate.cpp  CodeAuthenticate.h  Connexion.cpp  Inscription.cpp  Inscription.h  VerificationCompte.cpp  VerificationCompte.h
src/TCP/: Client.cpp
test/: CMakeLists.txt
test/Mock/: RestApiServer.h
test/RestApiHandler/: InscriptionTest.cpp
